SEOBNR: move validated v4P notebook from in_progress to main directory.  Add trusted list of expressions and Hreal function to SEOBNR/.

--- a/Tutorial-SEOBNR_v4P_Hamiltonian.ipynb
+++ b/Tutorial-SEOBNR_v4P_Hamiltonian.ipynb
@@ -3379,12 +3379,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From [SH2016](https://arxiv.org/abs/1608.01907) Equation (A2c) we have\n",
+    "We combine [SH2016](https://arxiv.org/abs/1608.01907) Equation (A2c) with [BL2017](https://arxiv.org/abs/1611.03703) Equation (2.3) (the last term in our expression) to find\n",
     "\n",
     "\\begin{align*}\n",
     "    \\Delta_{5} &= \\left( \\eta K - 1 \\right)^{2} \\left( -\\frac{4237}{60} + \\frac{128}{5}\\gamma + \\frac{2275}{512} \\pi^{2} - \\frac{1}{3} a^{2} \\left\\{ \\Delta_{1}^{3} - 3 \\Delta_{1} \\Delta_{2} + 3 \\Delta_{3} \\right\\} \\right. \\\\\n",
     "        &\\ \\ \\ \\ \\ - \\frac{ \\Delta_{1}^{5} - 5 \\Delta_{1}^{3} \\Delta_{2} + 5 \\Delta_{1} \\Delta_{2}^{2} + 5 \\Delta_{1}^{2} \\Delta_{3} - 5 \\Delta_{2} \\Delta_{3} - 5 \\Delta_{1} \\Delta_{4} }{ 5 \\left( \\eta K - 1 \\right)^{2} } \\\\\n",
-    "         &\\left.\\ \\ \\ \\ \\  + \\frac{ \\Delta_{1}^{4} - 4 \\Delta_{1}^{2}  \\Delta_{2} + 2 \\Delta_{2}^{2} + 4 \\Delta_{1} \\Delta_{3} - 4 \\Delta_{4} }{ 2\\left( \\eta K - 1 \\right) } + \\frac{256}{5} \\log(2) \\right)\n",
+    "         &\\left.\\ \\ \\ \\ \\  + \\frac{ \\Delta_{1}^{4} - 4 \\Delta_{1}^{2}  \\Delta_{2} + 2 \\Delta_{2}^{2} + 4 \\Delta_{1} \\Delta_{3} - 4 \\Delta_{4} }{ 2\\left( \\eta K - 1 \\right) } + \\frac{256}{5} \\log(2) + \\left\\{ \\frac{41\\pi^2}{32} - \\frac{221}{6} \\right\\} \\eta \\right)\n",
     "\\end{align*}\n",
     "\n",
     "Note that we have exlcuded the first term in the brackets in (A2c); this is the term $\\Delta_{5\\ell}$ which we defined in [this cell](#calib_coeffs)."
@@ -3406,13 +3406,14 @@
    "source": [
     "%%writefile -a $Ccodesdir/v4P_Hamiltonian-Hreal_on_top.txt\n",
     "\n",
-    "Delta5 = etaKminus1*etaKminus1*((sp.Rational(-4237,60) + sp.Rational(128,5)*EMgamma\n",
+    "Delta5 = etaKminus1*etaKminus1*(sp.Rational(-4237,60) + sp.Rational(128,5)*EMgamma\n",
     "                        + sp.Rational(2275,512)*sp.pi*sp.pi - sp.Rational(1,3)*a*a*(Delta1*Delta1*Delta1\n",
     "                        - 3*Delta1*Delta2 + 3*Delta3) - (Delta1*Delta1*Delta1*Delta1*Delta1\n",
     "                        - 5*Delta1*Delta1*Delta1*Delta2 + 5*Delta1*Delta2*Delta2 + 5*Delta1*Delta1*Delta3\n",
     "                        - 5*Delta2*Delta3 - 5*Delta1*Delta4)/(5*etaKminus1*etaKminus1)\n",
     "                        + (Delta1*Delta1*Delta1*Delta1 - 4*Delta1*Delta1*Delta2 + 2*Delta2*Delta2\n",
-    "                        + 4*Delta1*Delta3 - 4*Delta4)/(2*etaKminus1) + sp.Rational(256,5)*sp.log(2)))"
+    "                        + 4*Delta1*Delta3 - 4*Delta4)/(2*etaKminus1) + sp.Rational(256,5)*sp.log(2)\n",
+    "                        + (sp.Rational(41,32)*sp.pi*sp.pi - sp.Rational(221,6))*eta)"
    ]
   },
   {
@@ -3583,7 +3584,7 @@
     "### Step 13.e.iv: $K$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{k}$$\n",
     "\n",
-    "The calibration constant $K$ is defined in [BL2017](https://arxiv.org/pdf/1611.03703.pdf) Section IV, Equations (4.8) and (4.12) (equations copied from BL2017 source code):\n",
+    "The calibration constant $K$ is defined in [BL2017](https://arxiv.org/abs/1611.03703) Section IV, Equations (4.8) and (4.12) (equations copied from BL2017 source code):\n",
     "\n",
     "\\begin{equation*}\n",
     "  \\left.K\\right|_{\\chi=0} = 267.788247\\,  \\nu^3 -126.686734\\,  \\nu^2 + 10.257281\\,\\nu  + 1.733598,\n",
@@ -3623,7 +3624,7 @@
     "K = - 59.1658*chi*chi*chi*eta*eta*eta - 0.426958*chi*chi*chi*eta + 1.43659*chi*chi*chi\n",
     "    + 31.1746*chi*chi*eta*eta*eta + 6.16466*chi*chi*eta*eta - 1.38086*chi*chi - 27.5201*chi*eta*eta*eta\n",
     "    + 17.3736*chi*eta*eta + 2.26831*chi*eta - 1.62045*chi + Kchi0\n",
-    "Kchi0 = 267.788*eta*eta*eta -126.687*eta*eta + 10.257*eta  + 1.7336"
+    "Kchi0 = 267.788*eta*eta*eta -126.687*eta*eta + 10.2573*eta  + 1.7336"
    ]
   },
   {
@@ -4681,38 +4682,7 @@
      "text": [
       "Printing difference between notebook output and a trusted list of expressions...\n",
       "Checking file v4P_Hamiltonian_expressions.txt-VALIDATION\n",
-      "No difference. TEST PASSED!\n",
-      "sigma = (8.530762167125804e-03,5.123859031774350e-03,-9.063421887775954e-03)\n",
-      "Skerr = (8.530762167125804e-03,5.123859031774350e-03,-9.063421887775954e-03)\n",
-      "Lhat = (-0.000000000000000e+00, 1.813471288820454e-21, 1.000000000000000e+00)\n",
-      "SperpdotSkerr = 9.902783452956051e-05\n",
-      "SkerrdotL = -9.063421887775954e-03\n",
-      "1-2*eta = 5.775941230486685e-01\n",
-      "Skerrmag = 1.346006875336737e-02\n",
-      "chi = -9.322884947735630e-03\n",
-      "dSS = 5.045748321489743e+00\n",
-      "dSO = -4.557636251189805e+01\n",
-      "Hreal_trusted was  0.9952429078506889\n",
-      "ERROR. You have broken the Hamiltonian computation!\n",
-      "Hreal_trusted was  0.9952429078506889\n",
-      "...and Hreal is now  0.9952429915440175\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/K/juppy3/lib/python3.5/site-packages/IPython/core/interactiveshell.py:3304: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "No difference. TEST PASSED!\n"
      ]
     }
    ],
@@ -4750,7 +4720,7 @@
     "# Now reverse the expressions and write them in a function\n",
     "# This formulation is used to check that we get a reasonable H_real value\n",
     "with open(os.path.join(Ccodesdir,\"v4P_Hreal_on_bottom.py\"), \"w\") as output:\n",
-    "    output.write(\"import numpy as np\\ndef compute_v4P_Hreal(m1=23., m2=10., EMgamma=0.577215664901532860606512090082402431, tortoise=1, x=2.129689276308843e+01, y=0., z=0., p1=0., p2=2.335400279613854e-01, p3=0., S1x=4.857667584940312e-03, S1y=9.715169360795526e-03, S1z=-1.457311329284851e-02, S2x=3.673094582185491e-03, S2y=-4.591305539927589e-03, S2z=5.509694112510856e-03):\\n\")\n",
+    "    output.write(\"import numpy as np\\ndef compute_v4P_Hreal(m1=23., m2=10., EMgamma=0.577215664901532860606512090082402431, tortoise=1, x=2.1242072413581923e+01, y=0., z=0., p1=0., p2=2.1696072000958128e-01, p3=1.0000000000000000e-03, S1x=4.8576675849403119e-03, S1y=9.7153351698806237e-03, S1z=-1.4573002754820936e-02, S2x=3.6730945821854912e-03, S2y=-4.5913682277318639e-03, S2z=5.5096418732782371e-03):\\n\")\n",
     "    for line in reversed(list(open(\"SEOBNR/v4P_Hamiltonian-Hreal_one_line_expressions.txt\"))):\n",
     "        output.write(\"    %s\\n\" % line.rstrip().replace(\"sp.sqrt\", \"np.sqrt\").replace(\"sp.Rational\",\n",
     "                                \"np.divide\").replace(\"sp.abs\", \"np.abs\").replace(\"sp.log\",\n",
@@ -4799,8 +4769,6 @@
     "Hreal = Hreal_trusted.compute_v4P_Hreal()\n",
     "Hreal_temp = Hreal_new.compute_v4P_Hreal()\n",
     "\n",
-    "print(\"Hreal_trusted was \",Hreal)\n",
-    "\n",
     "if(np.abs(Hreal-Hreal_temp)>1e-14):\n",
     "    print(\"ERROR. You have broken the Hamiltonian computation!\")\n",
     "    print(\"Hreal_trusted was \",Hreal)\n",
@@ -4823,11 +4791,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Notebook output to PDF is only supported on Linux systems, with pdflatex installed.\n"
+     ]
+    }
+   ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-SEOBNR_Documentation\")"
@@ -4843,21 +4819,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
