SEOBNR: update v4P Hamiltonian notebook validation status.

--- a/Tutorial-SEOBNR_v4P_Hamiltonian.ipynb
+++ b/Tutorial-SEOBNR_v4P_Hamiltonian.ipynb
@@ -11,7 +11,7 @@
     "## This module documents the reduced spinning effective one-body Hamiltonian as numerically implemented in LALSuite's SEOBNRv4P gravitational waveform approximant.\n",
     "\n",
     "\n",
-    "**Notebook Status:** <font color='red'><b> Unvalidated </b></font>\n",
+    "**Notebook Status:** <font color='green'><b> Validated </b></font>\n",
     "\n",
     "**Validation Notes:** This module has been validated against the LALSuite [SEOBNRv4P code]( https://git.ligo.org/lscsoft/lalsuite.) that was reviewed and approved for LIGO parameter estimation by the LIGO Scientific Collaboration.  That is, the value $H_{\\rm real}$ output from this notebook agrees to roundoff error with the value of $H_{\\rm real}$ computed by the LALSuite function XLALSimIMRSpinPrecEOBHamiltonian().\n",
     "\n",
@@ -32,6 +32,8 @@
     "1. spacial tensor indicies are denoted by lowercase Latin letters,\n",
     "1. repeated indices indicate Einstein summation notation, and\n",
     "1. we normalize $M=1$ in all terms except for $\\eta$ and $\\mu$ for agreement with LALSuite.  Nonetheless, $M$ appears in other text cells for comparison with the cited literature.\n",
+    "\n",
+    "Running this notebook to completion will generate a file called v4P_Hreal_on_bottom.py.  This file contains the Python function v4P_compute_Hreal(), which takes as input m1, m2 (each in solar masses), the value of the [Euler-Mascheroni constant](https://en.wikipedia.org/wiki/Euler%E2%80%93Mascheroni_constant), a tortoise coordinate, and values for all twelve dynamic variables (3 components of the separation vector, three components of the momentum vector, and three spin components of each compact object).  Note that the spin components should be dimensionless.\n",
     "\n",
     "### Citations\n",
     "Throughout this module, we will refer to\n",
@@ -229,7 +231,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting SEOBNR/v4P_Hamiltonian-Hreal_on_top.txt\n"
+      "Writing SEOBNR/v4P_Hamiltonian-Hreal_on_top.txt\n"
      ]
     }
    ],
@@ -4819,21 +4821,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
