GiRaFFE_NRPy: Addressed (all?) recommendations from LGTM.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb
@@ -70,7 +70,7 @@
     "if nrpy_dir_path not in sys.path:\n",
     "    sys.path.append(nrpy_dir_path)\n",
     "\n",
-    "from outputC import *            # NRPy+: Core C code output module\n",
+    "from outputC import outCfunction # NRPy+: Core C code output module\n",
     "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
     "Ccodesdir = \"GiRaFFE_standalone_Ccodes/FCVAL\"\n",
     "cmd.mkdir(os.path.join(Ccodesdir))"
@@ -120,12 +120,12 @@
    ],
    "source": [
     "%%writefile $Ccodesdir/interpolate_metric_gfs_to_cell_faces.h\n",
-    "// Side note: the following values could be used for cell averaged gfs: \n",
+    "// Side note: the following values could be used for cell averaged gfs:\n",
     "//     am2=-1.0/12.0, am1=7.0/12.0, a0=7.0/12.0, a1=-1.0/12.0\n",
-    "// However, since the metric gfs store the grid point values instead of the cell average, \n",
-    "//     the following coefficients should be used: \n",
+    "// However, since the metric gfs store the grid point values instead of the cell average,\n",
+    "//     the following coefficients should be used:\n",
     "//     am2 = -1/16, am1 = 9/16, a0 = 9/16, a1 = -1/16\n",
-    "// This will yield the third-order-accurate face values at m-1/2, \n",
+    "// This will yield the third-order-accurate face values at m-1/2,\n",
     "//      using values specified at {m-2,m-1,m,m+1}\n",
     "#define AM2 -0.0625\n",
     "#define AM1  0.5625\n",
@@ -317,15 +317,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "Notebook output to PDF is only supported on Linux systems, with pdflatex installed.\n"
      ]
     }
    ],
