--- a/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
@@ -112,15 +112,10 @@
     "if nrpy_dir_path not in sys.path:\n",
     "    sys.path.append(nrpy_dir_path)\n",
     "\n",
-    "from outputC import *            # NRPy+: Core C code output module\n",
-    "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
+    "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
     "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
-    "import loop as lp                # NRPy+: Generate C code loops\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
-    "import reference_metric as rfm   # NRPy+: Reference metric support\n",
-    "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
-    "import shutil, os, sys           # Standard Python modules for multiplatform OS-level functions\n",
     "\n",
     "thismodule = \"GiRaFFE_NRPy-Stilde-flux\"\n"
    ]
@@ -566,20 +561,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is pdfTeX, Version 3.1415926-2.4-1.40.13 (MiKTeX 2.9)\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.1415926-2.4-1.40.13 (MiKTeX 2.9)\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.1415926-2.4-1.40.13 (MiKTeX 2.9)\n",
-      "entering extended mode\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "'rm' is not recognized as an internal or external command,\n",
-      "operable program or batch file.\n"
+      "Notebook output to PDF is only supported on Linux systems, with pdflatex installed.\n"
      ]
     }
    ],
