--- a/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests.ipynb
@@ -109,10 +109,8 @@
     "    sys.path.append(nrpy_dir_path)\n",
     "\n",
     "# Step 0.a: Import the NRPy+ core modules and set the reference metric to Cartesian\n",
-    "from outputC import *            # NRPy+: Core C code output module\n",
-    "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
+    "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
-    "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "\n",
     "import reference_metric as rfm   # NRPy+: Reference metric support\n",
@@ -215,15 +213,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sin(5*M_PI*xx0/sqrt(1 - mu_AW**2)) + 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "xprime = gammamu*x\n",
     "f_AW = 1 + sp.sin(5*M_PI*xprime)"
@@ -246,15 +236,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3*sin(5*M_PI*xx0/sqrt(1 - mu_AW**2))/20 + 23/20)*(xx0/2 + sqrt(1 - mu_AW**2)/20 + nrpyAbs(xx0 + sqrt(1 - mu_AW**2)/10)/2)*(-TINYDOUBLE/2 + xx0/2 - sqrt(1 - mu_AW**2)/20 - nrpyAbs(-TINYDOUBLE + xx0 - sqrt(1 - mu_AW**2)/10)/2)/((-TINYDOUBLE + xx0 - sqrt(1 - mu_AW**2)/10)*(TINYDOUBLE + xx0 + sqrt(1 - mu_AW**2)/10)) + 13*(xx0/2 - sqrt(1 - mu_AW**2)/20 + nrpyAbs(xx0 - sqrt(1 - mu_AW**2)/10)/2)/(10*(TINYDOUBLE + xx0 - sqrt(1 - mu_AW**2)/10)) + (-TINYDOUBLE/2 + xx0/2 + sqrt(1 - mu_AW**2)/20 - nrpyAbs(-TINYDOUBLE + xx0 + sqrt(1 - mu_AW**2)/10)/2)/(-TINYDOUBLE + xx0 + sqrt(1 - mu_AW**2)/10)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Bzleft = sp.sympify(1)\n",
     "Bzcenter = sp.sympify(1) + sp.Rational(15,100)*f_AW\n",
@@ -408,10 +390,6 @@
     }
    ],
    "source": [
-    "# Reset the list of gridfunctions, as registering a gridfunction\n",
-    "#   twice will spawn an error.\n",
-    "gri.glb_gridfcs_list = []\n",
-    "\n",
     "import GiRaFFEfood_NRPy.GiRaFFEfood_NRPy_1D_tests as gfho\n",
     "gfho.GiRaFFEfood_NRPy_1D_tests()\n",
     "\n",
@@ -445,15 +423,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "Notebook output to PDF is only supported on Linux systems, with pdflatex installed.\n"
      ]
     }
    ],
