--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.ipynb
@@ -83,11 +83,10 @@
     "if nrpy_dir_path not in sys.path:\n",
     "    sys.path.append(nrpy_dir_path)\n",
     "\n",
-    "from outputC import *            # NRPy+: Core C code output module\n",
+    "from outputC import outCfunction, lhrh # NRPy+: Core C code output module\n",
     "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
     "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
     "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
-    "import loop as lp                # NRPy+: Generate C code loops\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "import reference_metric as rfm   # NRPy+: Reference metric support\n",
     "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
