--- a/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
@@ -188,11 +188,11 @@
     "for i in range(3):\n",
     "    for j in range(3):\n",
     "        BtildeD[j] += gammaDD[i][j]*BtildeU[i]\n",
-    "        \n",
+    "\n",
     "Btilde2 = sp.sympify(0)\n",
     "for i in range(3):\n",
     "    Btilde2 += BtildeU[i]*BtildeD[i]\n",
-    "    \n",
+    "\n",
     "# Then, enforce the orthogonality:\n",
     "if par.parval_from_str(\"enforce_orthogonality_StildeD_BtildeU\"):\n",
     "    StimesB = sp.sympify(0)\n",
@@ -241,7 +241,7 @@
     "    for j in range(3):\n",
     "        Stilde2 += gammaUU[i][j]*StildeD[i]*StildeD[j]\n",
     "\n",
-    "# First we need to compute the factor f: \n",
+    "# First we need to compute the factor f:\n",
     "# f = \\sqrt{(1-\\Gamma_{\\max}^{-2}){\\tilde B}^4/(16 \\pi^2 \\gamma {\\tilde S}^2)}\n",
     "speed_limit_factor = sp.sqrt((sp.sympify(1)-GAMMA_SPEED_LIMIT**(-2.0))*Btilde2*Btilde2*sp.Rational(1,16)/\\\n",
     "                             (M_PI*M_PI*GRHD.sqrtgammaDET*GRHD.sqrtgammaDET*Stilde2))\n",
@@ -323,7 +323,7 @@
     "        driftvU[i] = alpha*ValenciavU[i] - betaU[i]\n",
     "\n",
     "    # The direct approach, used by the original GiRaFFE:\n",
-    "    # v^z = -(\\gamma_{xz} v^x + \\gamma_{yz} v^y) / \\gamma_{zz} \n",
+    "    # v^z = -(\\gamma_{xz} v^x + \\gamma_{yz} v^y) / \\gamma_{zz}\n",
     "    newdriftvU2 = -(gammaDD[0][2]*driftvU[0] + gammaDD[1][2]*driftvU[1])/gammaDD[2][2]\n",
     "    # Now that we have the z component, it's time to substitute its Valencia form in.\n",
     "    # Remember, we only do this if abs(z) < (k+0.01)*dz. Note that we add 0.01; this helps\n",
@@ -399,7 +399,7 @@
     "    # We'll reset the Valencia velocity, since this will be part of a second call to outCfunction.\n",
     "\n",
     "    # First compute stress-energy tensor T4UU and T4UD:\n",
-    "    \n",
+    "\n",
     "    GRHD.compute_sqrtgammaDET(gammaDD)\n",
     "    GRHD.u4U_in_terms_of_ValenciavU__rescale_ValenciavU_by_applying_speed_limit(alpha, betaU, gammaDD, ValenciavU)\n",
     "    GRFFE.compute_smallb4U_with_driftvU_for_FFE(gammaDD, betaU, alpha, GRHD.u4U_ito_ValenciavU, BU, sqrt4pi)\n",
@@ -410,7 +410,7 @@
     "\n",
     "    # Compute conservative variables in terms of primitive variables\n",
     "    GRHD.compute_S_tildeD(alpha, GRHD.sqrtgammaDET, GRFFE.TEM4UD)\n",
-    "    \n",
+    "\n",
     "    global StildeD\n",
     "    StildeD = GRHD.S_tildeD\n"
    ]
@@ -526,8 +526,7 @@
     "    print(\"ALL TESTS PASSED!\")\n",
     "else:\n",
     "    print(\"ERROR: AT LEAST ONE TEST DID NOT PASS\")\n",
-    "    sys.exit(1)\n",
-    "        "
+    "    sys.exit(1)\n"
    ]
   },
   {
@@ -578,7 +577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
