--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.ipynb
@@ -145,12 +145,12 @@
     "args[0] = a*x + b*y + c*z\n",
     "args[1] = b*x + c*y + a*z\n",
     "args[2] = c*x + a*y + b*z\n",
-    "if Use_Shock_Data: \n",
-    "    for i in range(3): \n",
+    "if Use_Shock_Data:\n",
+    "    for i in range(3):\n",
     "        args[i] += max_noif(0,5*x)\n",
     "\n",
     "ValenciavU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"ValenciavU\")\n",
-    "for i in range(3): \n",
+    "for i in range(3):\n",
     "    ValenciavU[i] = (sp.sympify(2)/M_PI)*sp.atan(args[i])"
    ]
   },
@@ -184,8 +184,8 @@
     "BU[0] = sp.exp(e*y+f*z)\n",
     "BU[1] = sp.exp(f*z+d*x)\n",
     "BU[2] = sp.exp(d*x+e*y)\n",
-    "if Use_Shock_Data: \n",
-    "    for i in range(3): \n",
+    "if Use_Shock_Data:\n",
+    "    for i in range(3):\n",
     "        BU[i] += max_noif(0,5*x)\n"
    ]
   },
@@ -333,8 +333,7 @@
     "\n",
     "    # Write down the file the original IllinoisGRMHD source code\n",
     "    with open(original_file_path,\"w\") as file:\n",
-    "        file.write(original_file_code)\n",
-    "    "
+    "        file.write(original_file_code)\n"
    ]
   },
   {
@@ -457,13 +456,13 @@
     "    paramstruct params;\n",
     "#include \"set_Cparameters_default.h\"\n",
     "\n",
-    "    // Step 0c: Set free parameters, overwriting Cparameters defaults \n",
+    "    // Step 0c: Set free parameters, overwriting Cparameters defaults\n",
     "    //          by hand or with command-line input, as desired.\n",
     "#include \"free_parameters.h\"\n",
     "#include \"set_Cparameters-nopointer.h\"\n",
     "\n",
     "    const int cctk_lsh[3] = {Nxx_plus_2NGHOSTS0,Nxx_plus_2NGHOSTS1,Nxx_plus_2NGHOSTS2};\n",
-    "    \n",
+    "\n",
     "    // We'll define our grid slightly different from how we normally would. We let our outermost\n",
     "    // ghostzones coincide with xxmin and xxmax instead of the interior of the grid. This means\n",
     "    // that the ghostzone points will have identical positions so we can do convergence tests of them.    // Step 0d.ii: Set up uniform coordinate grids\n",
@@ -474,9 +473,9 @@
     "    for(int j=0;j<Nxx_plus_2NGHOSTS0;j++) xx[0][j] = xxmin[0] + ((REAL)(j))*dxx0;\n",
     "    for(int j=0;j<Nxx_plus_2NGHOSTS1;j++) xx[1][j] = xxmin[1] + ((REAL)(j))*dxx1;\n",
     "    for(int j=0;j<Nxx_plus_2NGHOSTS2;j++) xx[2][j] = xxmin[2] + ((REAL)(j))*dxx2;\n",
-    "    \n",
+    "\n",
     "    //for(int i=0;i<Nxx_plus_2NGHOSTS0;i++) printf(\"xx[0][%d] = %.15e\\n\",i,xx[0][i]);\n",
-    "    \n",
+    "\n",
     "    // This is the array to which we'll write the NRPy+ variables.\n",
     "    REAL *auxevol_gfs  = (REAL *)malloc(sizeof(REAL) * NUM_AUXEVOL_GFS * Nxx_plus_2NGHOSTS2 * Nxx_plus_2NGHOSTS1 * Nxx_plus_2NGHOSTS0);\n",
     "\n",
@@ -489,7 +488,7 @@
     "\n",
     "    calculate_BU(&params,xx,auxevol_gfs);\n",
     "    calculate_ValenciavU(&params,xx,auxevol_gfs);\n",
-    "    \n",
+    "\n",
     "    gf_and_gz_struct in_prims[NUM_RECONSTRUCT_GFS], out_prims_r[NUM_RECONSTRUCT_GFS], out_prims_l[NUM_RECONSTRUCT_GFS];\n",
     "    int which_prims_to_reconstruct[NUM_RECONSTRUCT_GFS],num_prims_to_reconstruct;\n",
     "\n",
@@ -497,29 +496,29 @@
     "    REAL temporary[Nxxp2NG012];\n",
     "\n",
     "    int ww=0;\n",
-    "    in_prims[ww].gf      = auxevol_gfs + Nxxp2NG012*VALENCIAVU0GF; \n",
-    "      out_prims_r[ww].gf = auxevol_gfs + Nxxp2NG012*VALENCIAV_RU0GF; \n",
-    "      out_prims_l[ww].gf = auxevol_gfs + Nxxp2NG012*VALENCIAV_LU0GF; \n",
+    "    in_prims[ww].gf      = auxevol_gfs + Nxxp2NG012*VALENCIAVU0GF;\n",
+    "      out_prims_r[ww].gf = auxevol_gfs + Nxxp2NG012*VALENCIAV_RU0GF;\n",
+    "      out_prims_l[ww].gf = auxevol_gfs + Nxxp2NG012*VALENCIAV_LU0GF;\n",
     "    ww++;\n",
-    "    in_prims[ww].gf      = auxevol_gfs + Nxxp2NG012*VALENCIAVU1GF; \n",
-    "      out_prims_r[ww].gf = auxevol_gfs + Nxxp2NG012*VALENCIAV_RU1GF; \n",
-    "      out_prims_l[ww].gf = auxevol_gfs + Nxxp2NG012*VALENCIAV_LU1GF; \n",
+    "    in_prims[ww].gf      = auxevol_gfs + Nxxp2NG012*VALENCIAVU1GF;\n",
+    "      out_prims_r[ww].gf = auxevol_gfs + Nxxp2NG012*VALENCIAV_RU1GF;\n",
+    "      out_prims_l[ww].gf = auxevol_gfs + Nxxp2NG012*VALENCIAV_LU1GF;\n",
     "    ww++;\n",
-    "    in_prims[ww].gf      = auxevol_gfs + Nxxp2NG012*VALENCIAVU2GF; \n",
-    "      out_prims_r[ww].gf = auxevol_gfs + Nxxp2NG012*VALENCIAV_RU2GF; \n",
-    "      out_prims_l[ww].gf = auxevol_gfs + Nxxp2NG012*VALENCIAV_LU2GF; \n",
+    "    in_prims[ww].gf      = auxevol_gfs + Nxxp2NG012*VALENCIAVU2GF;\n",
+    "      out_prims_r[ww].gf = auxevol_gfs + Nxxp2NG012*VALENCIAV_RU2GF;\n",
+    "      out_prims_l[ww].gf = auxevol_gfs + Nxxp2NG012*VALENCIAV_LU2GF;\n",
     "    ww++;\n",
-    "    in_prims[ww].gf      = auxevol_gfs + Nxxp2NG012*BU0GF; \n",
-    "      out_prims_r[ww].gf = auxevol_gfs + Nxxp2NG012*B_RU0GF; \n",
-    "      out_prims_l[ww].gf = auxevol_gfs + Nxxp2NG012*B_LU0GF; \n",
+    "    in_prims[ww].gf      = auxevol_gfs + Nxxp2NG012*BU0GF;\n",
+    "      out_prims_r[ww].gf = auxevol_gfs + Nxxp2NG012*B_RU0GF;\n",
+    "      out_prims_l[ww].gf = auxevol_gfs + Nxxp2NG012*B_LU0GF;\n",
     "    ww++;\n",
-    "    in_prims[ww].gf      = auxevol_gfs + Nxxp2NG012*BU1GF; \n",
-    "      out_prims_r[ww].gf = auxevol_gfs + Nxxp2NG012*B_RU1GF; \n",
-    "      out_prims_l[ww].gf = auxevol_gfs + Nxxp2NG012*B_LU1GF; \n",
+    "    in_prims[ww].gf      = auxevol_gfs + Nxxp2NG012*BU1GF;\n",
+    "      out_prims_r[ww].gf = auxevol_gfs + Nxxp2NG012*B_RU1GF;\n",
+    "      out_prims_l[ww].gf = auxevol_gfs + Nxxp2NG012*B_LU1GF;\n",
     "    ww++;\n",
-    "    in_prims[ww].gf      = auxevol_gfs + Nxxp2NG012*BU2GF; \n",
-    "      out_prims_r[ww].gf = auxevol_gfs + Nxxp2NG012*B_RU2GF; \n",
-    "      out_prims_l[ww].gf = auxevol_gfs + Nxxp2NG012*B_LU2GF; \n",
+    "    in_prims[ww].gf      = auxevol_gfs + Nxxp2NG012*BU2GF;\n",
+    "      out_prims_r[ww].gf = auxevol_gfs + Nxxp2NG012*B_RU2GF;\n",
+    "      out_prims_l[ww].gf = auxevol_gfs + Nxxp2NG012*B_LU2GF;\n",
     "    ww++;\n",
     "\n",
     "    // Prims are defined AT ALL GRIDPOINTS, so we set the # of ghostzones to zero:\n",
@@ -536,7 +535,7 @@
     "    which_prims_to_reconstruct[ww]=BY; ww++;\n",
     "    which_prims_to_reconstruct[ww]=BZ; ww++;\n",
     "    num_prims_to_reconstruct=ww;\n",
-    "    \n",
+    "\n",
     "    // Outputs to store data temporarily for comparison:\n",
     "    REAL vxrC,vxrN,vyrC,vyrN,vzrC,vzrN;\n",
     "    REAL vxlC,vxlN,vylC,vylN,vzlC,vzlN;\n",
@@ -544,10 +543,10 @@
     "    REAL BxlC,BxlN,BylC,BylN,BzlC,BzlN;\n",
     "    // There is one relevant gridpoint at which to compare: the center, or indices 3,3,3.\n",
     "    int all_agree = 1;\n",
-    "    \n",
+    "\n",
     "    int flux_dirn = 1;\n",
     "    // This function is housed in the file: \"reconstruct_set_of_prims_PPM_GRFFE_NRPy.c\"\n",
-    "    reconstruct_set_of_prims_PPM_GRFFE_NRPy(&params, auxevol_gfs, flux_dirn, num_prims_to_reconstruct,                                                          \n",
+    "    reconstruct_set_of_prims_PPM_GRFFE_NRPy(&params, auxevol_gfs, flux_dirn, num_prims_to_reconstruct,\n",
     "                                            which_prims_to_reconstruct, in_prims, out_prims_r, out_prims_l, temporary);\n",
     "    vxrN = auxevol_gfs[IDX4S(VALENCIAV_RU0GF,3,3,3)];\n",
     "    vyrN = auxevol_gfs[IDX4S(VALENCIAV_RU0GF,3,3,3)];\n",
@@ -575,7 +574,7 @@
     "    BxlC = auxevol_gfs[IDX4S(VALENCIAV_RU0GF,3,3,3)];\n",
     "    BylC = auxevol_gfs[IDX4S(VALENCIAV_RU0GF,3,3,3)];\n",
     "    BzlC = auxevol_gfs[IDX4S(VALENCIAV_RU0GF,3,3,3)];\n",
-    "    \n",
+    "\n",
     "    printf(\"Checking results in the x-direction...\\n\");\n",
     "    if(vxrN!=vxrC) {\n",
     "        printf(\"vxr agrees to %.3e significant digits.\\n\",1-log10(2*fabs(vxrN-vxrC)/(fabs(vxrN)+fabs(vxrC))));\n",
@@ -630,7 +629,7 @@
     "\n",
     "    flux_dirn = 2;\n",
     "    // This function is housed in the file: \"reconstruct_set_of_prims_PPM_GRFFE_NRPy.c\"\n",
-    "    reconstruct_set_of_prims_PPM_GRFFE_NRPy(&params, auxevol_gfs, flux_dirn, num_prims_to_reconstruct,                                                          \n",
+    "    reconstruct_set_of_prims_PPM_GRFFE_NRPy(&params, auxevol_gfs, flux_dirn, num_prims_to_reconstruct,\n",
     "                                            which_prims_to_reconstruct, in_prims, out_prims_r, out_prims_l, temporary);\n",
     "    vxrN = auxevol_gfs[IDX4S(VALENCIAV_RU0GF,3,3,3)];\n",
     "    vyrN = auxevol_gfs[IDX4S(VALENCIAV_RU0GF,3,3,3)];\n",
@@ -658,7 +657,7 @@
     "    BxlC = auxevol_gfs[IDX4S(VALENCIAV_RU0GF,3,3,3)];\n",
     "    BylC = auxevol_gfs[IDX4S(VALENCIAV_RU0GF,3,3,3)];\n",
     "    BzlC = auxevol_gfs[IDX4S(VALENCIAV_RU0GF,3,3,3)];\n",
-    "    \n",
+    "\n",
     "    printf(\"Checking results in the y-direction...\\n\");\n",
     "    if(vxrN!=vxrC) {\n",
     "        printf(\"vxr agrees to %.3e significant digits.\\n\",1-log10(2*fabs(vxrN-vxrC)/(fabs(vxrN)+fabs(vxrC))));\n",
@@ -713,7 +712,7 @@
     "\n",
     "    flux_dirn = 3;\n",
     "    // This function is housed in the file: \"reconstruct_set_of_prims_PPM_GRFFE_NRPy.c\"\n",
-    "    reconstruct_set_of_prims_PPM_GRFFE_NRPy(&params, auxevol_gfs, flux_dirn, num_prims_to_reconstruct,                                                          \n",
+    "    reconstruct_set_of_prims_PPM_GRFFE_NRPy(&params, auxevol_gfs, flux_dirn, num_prims_to_reconstruct,\n",
     "                                            which_prims_to_reconstruct, in_prims, out_prims_r, out_prims_l, temporary);\n",
     "    vxrN = auxevol_gfs[IDX4S(VALENCIAV_RU0GF,3,3,3)];\n",
     "    vyrN = auxevol_gfs[IDX4S(VALENCIAV_RU0GF,3,3,3)];\n",
@@ -741,7 +740,7 @@
     "    BxlC = auxevol_gfs[IDX4S(VALENCIAV_RU0GF,3,3,3)];\n",
     "    BylC = auxevol_gfs[IDX4S(VALENCIAV_RU0GF,3,3,3)];\n",
     "    BzlC = auxevol_gfs[IDX4S(VALENCIAV_RU0GF,3,3,3)];\n",
-    "    \n",
+    "\n",
     "    printf(\"Checking results in the z-direction...\\n\");\n",
     "    if(vxrN!=vxrC) {\n",
     "        printf(\"vxr agrees to %.3e significant digits.\\n\",1-log10(2*fabs(vxrN-vxrC)/(fabs(vxrN)+fabs(vxrC))));\n",
@@ -913,7 +912,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
