--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb
@@ -285,8 +285,7 @@
     "\n",
     "    # Write down the file the original IllinoisGRMHD source code\n",
     "    with open(original_file_path,\"w\") as file:\n",
-    "        file.write(original_file_code)\n",
-    "    "
+    "        file.write(original_file_code)\n"
    ]
   },
   {
@@ -346,7 +345,7 @@
     "params.a = 0.0;\n",
     "\"\"\")\n",
     "\n",
-    "    \n",
+    "\n",
     "# Generates declare_Cparameters_struct.h, set_Cparameters_default.h, and set_Cparameters[-SIMD].h\n",
     "par.generate_Cparameters_Ccodes(os.path.join(out_dir))"
    ]
@@ -542,11 +541,11 @@
     "    paramstruct params;\n",
     "#include \"set_Cparameters_default.h\"\n",
     "\n",
-    "    // Step 0c: Set free parameters, overwriting Cparameters defaults \n",
+    "    // Step 0c: Set free parameters, overwriting Cparameters defaults\n",
     "    //          by hand or with command-line input, as desired.\n",
     "#include \"free_parameters.h\"\n",
     "#include \"set_Cparameters-nopointer.h\"\n",
-    "    \n",
+    "\n",
     "    // Now that we've calculated dxx2,  we can define a cactus equivalent\n",
     "    cactus_dxx[0] = dxx0;\n",
     "    cactus_dxx[1] = dxx1;\n",
@@ -560,7 +559,7 @@
     "    for(int j=0;j<Nxx_plus_2NGHOSTS0;j++) xx[0][j] = xxmin[0] + (j-NGHOSTS)*dxx0;\n",
     "    for(int j=0;j<Nxx_plus_2NGHOSTS1;j++) xx[1][j] = xxmin[1] + (j-NGHOSTS)*dxx1;\n",
     "    for(int j=0;j<Nxx_plus_2NGHOSTS2;j++) xx[2][j] = xxmin[2] + (j-NGHOSTS)*dxx2;\n",
-    "    \n",
+    "\n",
     "    for(int k=0;k<Nxx_plus_2NGHOSTS2;k++)\n",
     "        for(int j=0;j<Nxx_plus_2NGHOSTS1;j++)\n",
     "            for(int i=0;i<Nxx_plus_2NGHOSTS0;i++) {\n",
@@ -570,13 +569,13 @@
     "                z[index] = xx[2][k];\n",
     "                r[index] = sqrt(x[index]*x[index] + y[index]*y[index] + z[index]*z[index]);\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    //for(int j=0;j<Nxx_plus_2NGHOSTS0;j++) printf(\"x[%d] = %.5e\\n\",j,xx[0][j]);\n",
     "\n",
     "    // This is the array to which we'll write the NRPy+ variables.\n",
     "    REAL *auxevol_gfs  = (REAL *)malloc(sizeof(REAL) * NUM_AUXEVOL_GFS * Nxx_plus_2NGHOSTS2 * Nxx_plus_2NGHOSTS1 * Nxx_plus_2NGHOSTS0);\n",
     "    REAL *evol_gfs  = (REAL *)malloc(sizeof(REAL) * NUM_EVOL_GFS * Nxx_plus_2NGHOSTS2 * Nxx_plus_2NGHOSTS1 * Nxx_plus_2NGHOSTS0);\n",
-    "    \n",
+    "\n",
     "    // Memory access for metric gridfunctions for Exact Wald:\n",
     "    alp = auxevol_gfs + (grid_size*ALPHAGF);\n",
     "    betax = auxevol_gfs + (grid_size*BETAU0GF);\n",
@@ -588,9 +587,9 @@
     "    else if(atoi(argv[1])==1) GiRaFFEfood_AlignedRotator();\n",
     "    else if(atoi(argv[1])==2) {Shifted_Kerr_Schild_initial_metric(&params,xx,auxevol_gfs);GiRaFFEfood_ExactWald();}\n",
     "    else if(atoi(argv[1])==3) GiRaFFEfood_FastWave();\n",
-    "    \n",
+    "\n",
     "    int all_agree = 1;\n",
-    "    \n",
+    "\n",
     "    for(int i0=0;i0<Nxx_plus_2NGHOSTS0;i0++){\n",
     "        for(int i1=0;i1<Nxx_plus_2NGHOSTS1;i1++){\n",
     "            for(int i2=0;i2<Nxx_plus_2NGHOSTS2;i2++){\n",
@@ -619,7 +618,7 @@
     "        int i2=Nxx_plus_2NGHOSTS2/2;\n",
     "        printf(\"Old GiRaFFE vx = %.15e\\n\",vel[CCTK_GFINDEX4D(cctkGH,i0,i1,i2,0)]);\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    // Shift the grid to compare A_x\n",
     "    for(int j=0;j<Nxx_plus_2NGHOSTS1;j++) xx[1][j] += 0.5*dxx1;\n",
     "    for(int j=0;j<Nxx_plus_2NGHOSTS2;j++) xx[2][j] += 0.5*dxx2;\n",
@@ -639,7 +638,7 @@
     "            }\n",
     "        }\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    // Shift the grid to compare A_y\n",
     "    for(int j=0;j<Nxx_plus_2NGHOSTS0;j++) xx[0][j] += 0.5*dxx0;\n",
     "    for(int j=0;j<Nxx_plus_2NGHOSTS1;j++) xx[1][j] -= 0.5*dxx1;\n",
@@ -659,7 +658,7 @@
     "            }\n",
     "        }\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    // Shift the grid to compare A_z\n",
     "    for(int j=0;j<Nxx_plus_2NGHOSTS1;j++) xx[1][j] += 0.5*dxx1;\n",
     "    for(int j=0;j<Nxx_plus_2NGHOSTS2;j++) xx[2][j] -= 0.5*dxx2;\n",
@@ -679,7 +678,7 @@
     "            }\n",
     "        }\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    //printf(\"NRPy: %.15e,%.15e,%.15e\\n\",evol_gfs[IDX4S(AD0GF, i0,i1,i2)],evol_gfs[IDX4S(AD1GF, i0,i1,i2)],evol_gfs[IDX4S(AD2GF, i0,i1,i2)]);\n",
     "    //printf(\"CCTK: %.15e,%.15e,%.15e\\n\",Avec[CCTK_GFINDEX4D(cctkGH,i0,i1,i2,0)],Avec[CCTK_GFINDEX4D(cctkGH,i0,i1,i2,1)],Avec[CCTK_GFINDEX4D(cctkGH,i0,i1,i2,2)]);\n",
     "\n",
@@ -803,7 +802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
