--- a/in_progress/Tutorial-GiRaFFE_NRPy-Overview.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Overview.ipynb
@@ -14,37 +14,51 @@
     "\n",
     "At each timestep, the conservative variables $A_i$ and $\\tilde{S}_i$ are advanced through time using the method of lines (MoL). Reconstruction methods, solving the Riemann problem, and finite-differencing methods are used to calculate spatial derivatives, and an RK solver handles the time evolution. Then, we update the primitive variables. $B^i$ is numerically calculated from $A_i$ and fixes are applied to $\\tilde{S}_i$ before calculating $\\bar{v}^i$ at the new timestep. Another algorithm is applied to $\\bar{v}^i$ to preserve current sheets in the $x$-$y$ plane, and $\\tilde{S}_i$ is updated to be consistent with these changes. \n",
     "\n",
+    "We must also consider whether we will employ a purely cell-centered approach or a staggered one. Both have their advantages, so ultimately, we will use a combination of them, using the staggered prescription throughout most of the grid for its stability and the unstaggered prescription near coordinate singularities to avoid them. This will require us to create two separate functions to calculate the right-hand sides of $A_k$ and $\\Phi$ as well as for calculating $B^i$ from $A_k$, as will be illustrated in the list below. We will also need separate main drivers because our choice of prescription affects what PPM reconstructions will be done and when they will be needed.\n",
+    "\n",
     "Below is a list of modules, ordered to approximately reflect the order in which they would come into play in a typical run.\n",
     "\n",
     "**List of Modules:**\n",
     "1. Overview\n",
     "    1. [You are here!](Tutorial-GiRaFFE_NRPy-Overview.ipynb)\n",
-    "1. Initial Data\n",
+    "1. Initial Data: <font color='Green'><b>Validated</b></font>\n",
     "    1. Exact Wald\n",
     "        * This initial data represents a spinning black hole in a uniform magnetic field aligned with the black hole's spin axis. [Tutorial](Tutorial-GiRaFFEfood_NRPy_Exact_Wald.ipynb)\n",
-    "        * This module currently contains a routine to calculate the initial $\\tilde{S}_i$ from the initial $\\bar{v}^i$, but this is probably redundant with the new P2C solver.\n",
     "    1. Aligned Rotator\n",
     "        * This flat-space test represents a toy model of a black hole magnetosphere. [Tutorial](Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator.ipynb)\n",
     "    1. 1-D test: Alfv&eacute;n Wave\n",
     "        * This test demonstrates the propagation of a specific MHD wave. [Tutorial](Tutorial-GiRaFFEfood_NRPy_1D_tests.ipynb)\n",
+    "    1. 1-D test: Fast Wave\n",
+    "        * This test demonstrates the propagation of another MHD wave. [Tutorial](Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave.ipynb)\n",
     "    1. More initial data to come!\n",
-    "1. Evolution\n",
-    "    1. Interpolate metric on cell faces\n",
-    "        * Basic interpolation of the metric gridfunctions at cell centers to cell faces given a specific direction. [Tutorial](Tutorial-GiRaFFE_NRPy-FCVAL.ipynb)\n",
-    "    1. Reconstruct primitives on cell faces\n",
-    "        * This uses the piecewise-parabolic method to reconstruct gridfunctions on cell faces and apply slope-limiting algorithms mitigate the Gibbs phenomenon and preserve shocks. [Tutorial](Tutorial-GiRaFFE_NRPy-PPM.ipynb)\n",
+    "    1. These initial data have been verified against the initial data generated in the original `GiRaFFE` and agree to round-off error. [Unit test](Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb)\n",
+    "1. Main Drivers\n",
+    "    * These modules will generate all the functions from the next two sections with one call and provide wrapper functions so that all the reconstructions and function calls can be done in the proper order, while avoiding cluttering up the main notebook. They come in two flavors:\n",
+    "        * Unstaggered: This implementation uses only cell-centered grids. This makes it easier to avoid coordinate singularities in curvilinear coordinate systems, but is less stable shocks whose speed approaches the speed of light. [Tutorial](Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb)\n",
+    "        * Staggered: This implementation staggers the electromagnetic quantities. While this is more stable for very fast shocks, it runs the risk of sampling the staggered quantities at coordinate singularities. **TODO: Tutorial**\n",
+    "1. Evolution: Find the right-hand sides of evolution equations for the conservative variables\n",
+    "    1. Calculate the gauge terms for $A_k$ and $\\Phi$. \n",
+    "        * Unstaggered prescription: [Tutorial for GRHD](../Tutorial-GRHD_Equations-Cartesian.ipynb) [Tutorial for GRFFE](../Tutorial-GRFFE_Equations-Cartesian.ipynb) [Unit test](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb)\n",
+    "        * Staggered prescription: **TODO: create notebook for C code.**\n",
+    "    1. Interpolate metric on cell faces: <font color='Green'><b>Validated</b></font>\n",
+    "        * Basic interpolation of the metric gridfunctions at cell centers to cell faces given a specific direction. [Tutorial](Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb), [Unit test](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Metric_Face_Values.ipynb)\n",
+    "    1. Reconstruct primitives on cell faces: <font color='Green'><b>Validated</b></font>\n",
+    "        * This uses the piecewise-parabolic method to reconstruct gridfunctions on cell faces and apply slope-limiting algorithms mitigate the Gibbs phenomenon and preserve shocks. [Tutorial](Tutorial-GiRaFFE_NRPy-PPM.ipynb), [Unit test](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.ipynb)\n",
     "    1. Solve the Riemann Problem for $\\tilde{S}_i$: <font color='Green'><b>Validated</b></font>\n",
-    "        * Use the reconstructed velocities and magnetic fields on the left and right sides of the cell faces to solve the Riemann problem and compute the flux of $\\tilde{S}_i$ on the interface. [Tutorial](Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb), [Unit test](Tutorial-Start_to_Finish-GiRaFFE_NRPy-Stilde_flux.ipynb)\n",
-    "    1. Solve the Riemann Problem for $A_i$: <font color='Orange'><b>In Progress</b></font>\n",
-    "        * Here, we apply a similar algorithm as in the previous step to compute the electric field $E_i = \\epsilon_{ijk} v^i B^i$. [Tutorial](Tutorial-GiRaFFE_NRPy-Induction_Equation.ipynb)\n",
+    "        * Use the reconstructed velocities and magnetic fields on the left and right sides of the cell faces to solve the Riemann problem and compute the flux of $\\tilde{S}_i$ on the interface. [Tutorial](Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb), [Unit test](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb)\n",
+    "    1. Solve the Riemann Problem for $A_i$: <font color='Green'><b>Validated</b></font>\n",
+    "        * Here, we apply a similar algorithm as in the previous step to compute the electric field $E_i = \\epsilon_{ijk} v^i B^i$. \n",
+    "        * Unstaggered prescription: [Tutorial](Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb), [Unit test](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Afield_flux.ipynb)\n",
+    "        * Staggered prescription: **TODO: create notebook for C code.**\n",
+    "1. Evolution: Update primitive variables from the evolved conservative variables\n",
     "    1. Calculate the magnetic field: <font color='green'><b>Validated</b></font>\n",
-    "        * Compute $B^i = \\epsilon^{ijk} \\partial_j A_k$ using standard finite-differencing methods. Care must be taken in the ghost zones to shift the template appropriately to avoid accessing points that are not stored in memory. [Tutorial](Tutorial-GiRaFFE_NRPy-A2B.ipynb), [Unit test](Tutorial-Start_to_Finish-GiRaFFE_NRPy-A2B.ipynb)\n",
+    "        * Compute $B^i = \\epsilon^{ijk} \\partial_j A_k$ using standard finite-differencing methods. Care must be taken in the ghost zones to shift the template appropriately to avoid accessing points that are not stored in memory. \n",
+    "        * Unstaggered prescription: [Tutorial](Tutorial-GiRaFFE_NRPy-A2B.ipynb), [Unit test](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb)\n",
+    "        * Staggered prescription: **TODO: create notebook for C code.**\n",
     "    1. Recalculate $\\bar{v}^i$ and apply fixes to $\\tilde{S}_i$ and $\\bar{v}^i$: <font color='green'><b>Validated</b></font>\n",
-    "        * Apply fixes to $\\tilde{S}_i$, then recompute $\\bar{v}^i$ at the next time step. Then, apply fixes to $\\bar{v}^i$ to preserve current sheets, and recompute $\\tilde{S}_i$ to match. [Tutorial](Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb), [Unit test](Tutorial-Start_to_Finish-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
-    "    1. Apply boundary conditions\n",
-    "        * Apply linear (To be upgraded?) outer boundary conditions to the vector potential and Valencia three-velocity. [Tutorial](Tutorial-GiRaFFE_NRPy-BCs.ipynb)\n",
-    "\n",
-    "**A note on Validation:** All currently-written initial data modules have been validated against the original `GiRaFFE`, but this is not adequately documented.\n",
+    "        * Apply fixes to $\\tilde{S}_i$, then recompute $\\bar{v}^i$ at the next time step. Then, apply fixes to $\\bar{v}^i$ to preserve current sheets, and recompute $\\tilde{S}_i$ to match. [Tutorial](Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb), [Unit test](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb)\n",
+    "    1. Apply boundary conditions: <font color='Green'><b>Validated</b></font>\n",
+    "        * Apply linear (To be upgraded?) outer boundary conditions to the vector potential and Valencia three-velocity. [Tutorial](Tutorial-GiRaFFE_NRPy-BCs.ipynb), [Unit test](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-BCs.ipynb)\n",
     "\n",
     "**List of Critical Papers:**\n",
     "1. The original `GiRaFFE` paper: [arxiv:1704.00599](https://arxiv.org/abs/1704.00599)\n",
@@ -54,13 +68,6 @@
     "        1. Paschalidis, et al. (2013): [arxiv:1310.3274](https://arxiv.org/abs/1310.3274)\n",
     "            * Provides formulae used for C2P and P2C solvers and the evolution equation in terms of the densitized Poynting flux. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -79,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
