GiRaFFEfood_NRPy: Cleaned up the GiRaFFEfood notebooks.

--- a/in_progress/Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator.ipynb
@@ -20,9 +20,9 @@
     "\n",
     "[comment]: <> (Abstract: TODO)\n",
     "\n",
-    "**Notebook Status:** <font color='orange'><b> Self-Validated </b></font>\n",
+    "**Notebook Status:** <font color='green'><b> Validated </b></font>\n",
     "\n",
-    "**Validation Notes:** This tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). **Additional validation tests may have been performed, but are as yet, undocumented. (TODO)**\n",
+    "**Validation Notes:** This tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). The initial data has validated against the original `GiRaFFE`, as documented [here](Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb).\n",
     "\n",
     "### NRPy+ Source Code for this module: [GiRaFFEfood_NRPy_Aligned_Rotator.py](../edit/GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_Aligned_Rotator.py)\n",
     "\n",
@@ -30,7 +30,7 @@
     "\n",
     "This module provides another initial data option for $\\texttt{GiRaFFE}$. This is a flat-spacetime test with initial data $$A_{\\phi} = \\frac{\\mu \\varpi^2}{r^3},$$ where  $\\mu = B_p R^3_{\\rm NS} / 2$, $R_{\\rm NS}$ is the neutron star radius, and $\\varpi = \\sqrt{x^2+y^2}$ is the cylindrical radius. We let $A_r = A_\\theta = 0$.\n",
     "\n",
-    "Additionally, the drift velocity $v^i = \\Omega \\textbf{e}_z \\times \\textbf{r} = [ijk] \\Omega \\textbf{e}^j_z x^k$, where $[ijk]$ is the Levi-Civita permutation symbol and $\\textbf{e}^i_z = (0,0,1)$. See the [Tutorial-GiRaFFEfood_NRPy](Tutorial-GiRaFFEfood_NRPy.ipynb) tutorial notebook for details on how this is used."
+    "Additionally, the drift velocity $v^i = \\Omega \\textbf{e}_z \\times \\textbf{r} = [ijk] \\Omega \\textbf{e}^j_z x^k$, where $[ijk]$ is the Levi-Civita permutation symbol, $\\Omega$ is the angular velocity of the \"neutron star\", and $\\textbf{e}^i_z = (0,0,1)$. See the [Tutorial-GiRaFFEfood_NRPy](Tutorial-GiRaFFEfood_NRPy.ipynb) tutorial notebook for details on how this is used."
    ]
   },
   {
@@ -107,7 +107,7 @@
     "# Step 2: Set the vector $A_{\\phi}$ in Spherical coordinates \\[Back to [top](#toc)\\]\n",
     "$$\\label{set_aphi}$$\n",
     "\n",
-    "We will first build the fundamental vector $A_i$ in spherical coordinates (see [Table 3](https://arxiv.org/pdf/1704.00599.pdf)). Note that we use [reference_metric.py](../edit/reference_metric.py) to set $r$ and $\\theta$ in terms of Cartesian coordinates; this will save us a step later when we convert to Cartesian coordinates. So, we set \n",
+    "We will first build the fundamental vector $A_i$ in spherical coordinates (see [Table 3](https://arxiv.org/pdf/1704.00599.pdf)). Note that we use [reference_metric.py](../edit/reference_metric.py) to set $r$ and $\\varpi$ in terms of Cartesian coordinates; this will save us a step later when we convert to Cartesian coordinates. So, we set \n",
     "\\begin{align}\n",
     "A_{\\phi} &= \\frac{\\mu \\varpi^2}{r^3}, \\\\\n",
     "\\end{align}\n",
@@ -177,7 +177,7 @@
     "# Step 4: Calculate $v^i$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{vi}$$\n",
     "\n",
-    "Here, we will calculate the drift velocity $v^i = \\Omega \\textbf{e}_z \\times \\textbf{r} = [ijk] \\Omega \\textbf{e}^j_z x^k$, where $[ijk]$ is the Levi-Civita permutation symbol and $\\textbf{e}^i_z = (0,0,1)$. Conveniently, in flat space, the drift velocity reduces to the Valencia velocity because $\\alpha = 1$ and $\\beta^i = 0$.\n",
+    "Here, we will calculate the drift velocity $v^i = \\Omega \\textbf{e}_z \\times \\textbf{r} = [ijk] \\Omega \\textbf{e}^j_z x^k$, where $[ijk]$ is the Levi-Civita permutation symbol, $\\Omega$ is the angular velocity of the \"neutron star\", and $\\textbf{e}^i_z = (0,0,1)$. Conveniently, in flat space, the drift velocity reduces to the Valencia velocity because $\\alpha = 1$ and $\\beta^i = 0$.\n",
     "\n",
     "However, we need to set the velocity to zero outside the neutron star; this is equivalent to only setting the non-zero velocity inside the star, $r \\leq R_{\\rm NS}$"
    ]
@@ -190,8 +190,22 @@
    "source": [
     "# Step 4: Calculate v^i\n",
     "# Here, we build the Levi-Civita tensor from the Levi-Civita symbol.\n",
-    "import WeylScal4NRPy.WeylScalars_Cartesian as weyl\n",
-    "LeviCivitaSymbolDDD = weyl.define_LeviCivitaSymbol_rank3()\n",
+    "# Define Levi-Civita symbol\n",
+    "def define_LeviCivitaSymbol_rank3(DIM=-1):\n",
+    "    if DIM == -1:\n",
+    "        DIM = par.parval_from_str(\"DIM\")\n",
+    "\n",
+    "    LeviCivitaSymbol = ixp.zerorank3()\n",
+    "\n",
+    "    for i in range(DIM):\n",
+    "        for j in range(DIM):\n",
+    "            for k in range(DIM):\n",
+    "                # From https://codegolf.stackexchange.com/questions/160359/levi-civita-symbol :\n",
+    "                LeviCivitaSymbol[i][j][k] = (i - j) * (j - k) * (k - i) * sp.Rational(1,2)\n",
+    "    return LeviCivitaSymbol\n",
+    "GRHD.compute_sqrtgammaDET(gammaDD)\n",
+    "# Here, we import the Levi-Civita tensor and compute the tensor with lower indices\n",
+    "LeviCivitaSymbolDDD = define_LeviCivitaSymbol_rank3()\n",
     "\n",
     "import Min_Max_and_Piecewise_Expressions as noif\n",
     "\n",
@@ -300,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
