--- a/in_progress/Tutorial-GiRaFFEfood_NRPy_Exact_Wald.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy_Exact_Wald.ipynb
@@ -22,12 +22,12 @@
     "\n",
     "### NRPy+ Source Code for this module: [GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_Exact_Wald.py](../edit/GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_Exact_Wald.py)\n",
     "\n",
-    "**Notebook Status:** <font color='orange'><b> Self-Validated </b></font>\n",
+    "**Notebook Status:** <font color='green'><b> Validated </b></font>\n",
     "\n",
-    "**Validation Notes:** This tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation1). **Additional validation tests may have been performed, but are as yet, undocumented. (TODO)**\n",
+    "**Validation Notes:** This tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation1). The initial data has validated against the original `GiRaFFE`, as documented [here](Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb).\n",
     "\n",
     "## Introduction: \n",
-    "With the `GiRaFFE` evolution thorn constructed, we now need to \"feed\" our giraffe with initial data to evolve. While there are several different choices of initial data we can use here, for the moment, we will only be implementing the \"Exact Wald\" initial data, given by Table 3 in [the original paper](https://arxiv.org/pdf/1704.00599.pdf):\n",
+    "With the `GiRaFFE` evolution thorn constructed, we now need to \"feed\" our giraffe with initial data to evolve. There are several different choices of initial data we can use here; here, we will only be implementing the \"Exact Wald\" initial data, given by Table 3 in [the original paper](https://arxiv.org/pdf/1704.00599.pdf):\n",
     "\\begin{align}\n",
     "A_{\\phi} &= \\frac{C_0}{2} r^2 \\sin^2 \\theta \\\\\n",
     "E_{\\phi} &= 2 M C_0 \\left( 1+ \\frac {2M}{r} \\right)^{-1/2} \\sin^2 \\theta \\\\\n",
@@ -199,8 +199,7 @@
     "# Step 4: Calculate $v^i$ from $A_i$ and $E_i$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{vi}$$\n",
     "\n",
-    "We will now find the magnetic field using equation 18 in [the original paper](https://arxiv.org/pdf/1704.00599.pdf) $$B^i = \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k. $$ We will need the metric quantites: the lapse $\\alpha$, the shift $\\beta^i$, and the three-metric $\\gamma_{ij}$. We will also need the Levi-Civita symbol, provided by `WeylScal4NRPy.WeylScalars_Cartesian`. \n",
-    "\n"
+    "We will now find the magnetic field using equation 18 in [the original paper](https://arxiv.org/pdf/1704.00599.pdf) $$B^i = \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k. $$ We will need the metric quantites: the lapse $\\alpha$, the shift $\\beta^i$, and the three-metric $\\gamma_{ij}$. We will also need the Levi-Civita symbol. "
    ]
   },
   {
@@ -212,8 +211,22 @@
     "# Step 4: Calculate v^i from A_i and E_i\n",
     "# Step 4a: Calculate the magnetic field B^i\n",
     "# Here, we build the Levi-Civita tensor from the Levi-Civita symbol.\n",
-    "import WeylScal4NRPy.WeylScalars_Cartesian as weyl\n",
-    "LeviCivitaSymbolDDD = weyl.define_LeviCivitaSymbol_rank3()\n",
+    "# Define Levi-Civita symbol\n",
+    "def define_LeviCivitaSymbol_rank3(DIM=-1):\n",
+    "    if DIM == -1:\n",
+    "        DIM = par.parval_from_str(\"DIM\")\n",
+    "\n",
+    "    LeviCivitaSymbol = ixp.zerorank3()\n",
+    "\n",
+    "    for i in range(DIM):\n",
+    "        for j in range(DIM):\n",
+    "            for k in range(DIM):\n",
+    "                # From https://codegolf.stackexchange.com/questions/160359/levi-civita-symbol :\n",
+    "                LeviCivitaSymbol[i][j][k] = (i - j) * (j - k) * (k - i) * sp.Rational(1,2)\n",
+    "    return LeviCivitaSymbol\n",
+    "GRHD.compute_sqrtgammaDET(gammaDD)\n",
+    "# Here, we import the Levi-Civita tensor and compute the tensor with lower indices\n",
+    "LeviCivitaSymbolDDD = define_LeviCivitaSymbol_rank3()\n",
     "LeviCivitaTensorUUU = ixp.zerorank3()\n",
     "for i in range(3):\n",
     "    for j in range(3):\n",
@@ -362,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
