Levi-Civita: Consolidate so that the only definition occurs within indexedexp.py

--- a/Tutorial-GRFFE_Equations-Cartesian.ipynb
+++ b/Tutorial-GRFFE_Equations-Cartesian.ipynb
@@ -393,12 +393,7 @@
    "source": [
     "def compute_AD_flux_term(sqrtgammaDET,driftvU,BU):\n",
     "    # Levi-Civita tensor for cross products\n",
-    "    import WeylScal4NRPy.WeylScalars_Cartesian as weyl\n",
-    "    LeviCivitaDDD = weyl.define_LeviCivitaSymbol_rank3()\n",
-    "    for i in range(3):\n",
-    "        for j in range(3):\n",
-    "            for k in range(3):\n",
-    "                LeviCivitaDDD[i][j][k] *= sqrtgammaDET\n",
+    "    LeviCivitaDDD = ixp.LeviCivitaTensorDDD_dim3_rank3(sqrtgammaDET)\n",
     "    global A_fluxD\n",
     "    A_fluxD = ixp.zerorank1()\n",
     "    for i in range(3):\n",
