--- a/Tutorial-Psi4_tetrads.ipynb
+++ b/Tutorial-Psi4_tetrads.ipynb
@@ -205,9 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "... next we construct the third tetrad vector $v_3^a={\\rm det}(\\gamma)^{1/2} \\gamma^{ad} \\epsilon_{dbc} v_1^b v_2^c$:\n",
-    "\n",
-    "Let's start by defining the Levi-Civita symbol $\\epsilon_{dbc}$:"
+    "... next we construct the third tetrad vector $v_3^a={\\rm det}(\\gamma)^{1/2} \\gamma^{ad} \\epsilon_{dbc} v_1^b v_2^c$, using the Levi-Civita symbol $\\epsilon_{dbc}$ as defined in [indexedexp.py](../edit/indexedexp.py):"
    ]
   },
   {
@@ -216,32 +214,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 2.g: Define the rank-3 version of the Levi-Civita symbol. Amongst\n",
-    "#         other uses, this is needed for the construction of the approximate\n",
-    "#         quasi-Kinnersley tetrad.\n",
-    "def define_LeviCivitaSymbol_rank3(DIM=-1):\n",
-    "    if DIM == -1:\n",
-    "        DIM = par.parval_from_str(\"DIM\")\n",
-    "\n",
-    "    LeviCivitaSymbol = ixp.zerorank3()\n",
-    "\n",
-    "    for i in range(DIM):\n",
-    "        for j in range(DIM):\n",
-    "            for k in range(DIM):\n",
-    "                # From https://codegolf.stackexchange.com/questions/160359/levi-civita-symbol :\n",
-    "                LeviCivitaSymbol[i][j][k] = (i - j) * (j - k) * (k - i) * sp.Rational(1,2)\n",
-    "    return LeviCivitaSymbol\n",
-    "\n",
-    "# Step 2.h: Define v3U\n",
+    "# Step 2.g: Define v3U\n",
     "v3U = ixp.zerorank1()\n",
-    "LeviCivitaSymbolDDD = define_LeviCivitaSymbol_rank3(DIM=3)\n",
+    "LeviCivitaSymbolDDD = ixp.LeviCivitaSymbol_dim3_rank3()\n",
     "for a in range(DIM):\n",
     "    for b in range(DIM):\n",
     "        for c in range(DIM):\n",
     "            for d in range(DIM):\n",
     "                v3U[a] += sp.sqrt(detgamma)*gammaUU[a][d]*LeviCivitaSymbolDDD[d][b][c]*v1U[b]*v2U[c]\n",
     "\n",
-    "# Step 2.h.i: Simplify expressions for v1U,v2U,v3U. This greatly expedites the C code generation (~10x faster)\n",
+    "# Step 2.g.i: Simplify expressions for v1U,v2U,v3U. This greatly expedites the C code generation (~10x faster)\n",
     "#             Drat. Simplification with certain versions of SymPy & coord systems results in a hang. Let's just\n",
     "#             evaluate the expressions so the most trivial optimizations can be performed.\n",
     "for a in range(DIM):\n",
@@ -271,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 2.i: Define omega_{ij}\n",
+    "# Step 2.h: Define omega_{ij}\n",
     "omegaDD = ixp.zerorank2()\n",
     "gammaDD = AB.gammaDD\n",
     "def v_vectorDU(v1U,v2U,v3U,  i,a):\n",
@@ -290,7 +272,7 @@
     "        for b in range(DIM):\n",
     "            omegaDD[i][j] += v_vectorDU(v1U,v2U,v3U, i,a)*v_vectorDU(v1U,v2U,v3U, j,b)*gammaDD[a][b]\n",
     "\n",
-    "# Step 2.j: Define e^a_i. Note that:\n",
+    "# Step 2.i: Define e^a_i. Note that:\n",
     "#           omegaDD[0][0] = \\omega_{11} above;\n",
     "#           omegaDD[1][1] = \\omega_{22} above, etc.\n",
     "e1U = ixp.zerorank1()\n",
@@ -343,7 +325,7 @@
    },
    "outputs": [],
    "source": [
-    "# Step 2.k: Construct l^mu, n^mu, and m^mu, based on r^mu, theta^mu, phi^mu, and u^mu:\n",
+    "# Step 2.j: Construct l^mu, n^mu, and m^mu, based on r^mu, theta^mu, phi^mu, and u^mu:\n",
     "r4U     = ixp.zerorank1(DIM=4)\n",
     "u4U     = ixp.zerorank1(DIM=4)\n",
     "theta4U = ixp.zerorank1(DIM=4)\n",
