--- a/in_progress/Tutorial-GiRaFFE_NRPy-Overview.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Overview.ipynb
@@ -19,14 +19,14 @@
     "Below is a list of modules, ordered to approximately reflect the order in which they would come into play in a typical run.\n",
     "\n",
     "**List of Modules:**\n",
-    "1. Overview\n",
+    "1. [Introduction](Tutorial-GiRaFFE_NRPy-Overview.ipynb)\n",
     "    1. [You are here!](Tutorial-GiRaFFE_NRPy-Overview.ipynb)\n",
-    "1. Initial Data: <font color='Green'><b>Validated</b></font>\n",
+    "1. Initial Data:\n",
     "    1. Exact Wald\n",
     "        * This initial data represents a spinning black hole in a uniform magnetic field aligned with the black hole's spin axis. [Tutorial](Tutorial-GiRaFFEfood_NRPy_Exact_Wald.ipynb)\n",
     "    1. Aligned Rotator\n",
     "        * This flat-space test represents a toy model of a black hole magnetosphere. [Tutorial](Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator.ipynb)\n",
-    "    1. 1-D test: Alfv&eacute;n Wave\n",
+    "    1. <font color='green'><b> Patrick Seal of Approval</b></font>: 1-D test: Alfv&eacute;n Wave\n",
     "        * This test demonstrates the propagation of a specific MHD wave. [Tutorial](Tutorial-GiRaFFEfood_NRPy_1D_tests.ipynb)\n",
     "    1. 1-D test: Fast Wave\n",
     "        * This test demonstrates the propagation of another MHD wave. [Tutorial](Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave.ipynb)\n",
@@ -68,6 +68,13 @@
     "        1. Paschalidis, et al. (2013): [arxiv:1310.3274](https://arxiv.org/abs/1310.3274)\n",
     "            * Provides formulae used for C2P and P2C solvers and the evolution equation in terms of the densitized Poynting flux. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -86,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
