--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb
@@ -1104,7 +1104,21 @@
     "Data1 = np.loadtxt(\"out2-numer.txt\")\n",
     "Data2 = np.loadtxt(\"out4-numer.txt\")\n",
     "\n",
-    "print(\"The following quantities converge at the listed order (should be ~2):\")\n",
+    "\n",
+    "# print(\"The following quantities converge at the listed order (should be ~2):\")\n",
+    "\n",
+    "conv_order_min = 1.9\n",
+    "conv_order_max = 2.3\n",
+    "\n",
+    "def check_conv_order(description,conv_order):\n",
+    "    if conv_order < conv_order_min or conv_order > conv_order_max:\n",
+    "        print(\"ERROR: convergence order of \"+description+\" was too large: \"+str(conv_order))\n",
+    "        sys.exit(1)\n",
+    "    print(\"PASS: \"+description+\" has convergence order of \"+str(conv_order))\n",
+    "\n",
+    "check_conv_order(\"Stilde_rhsD0\", np.log2((Data1[0])/(Data2[0])))\n",
+    "check_conv_order(\"Stilde_rhsD1\", np.log2((Data1[0])/(Data2[0])))\n",
+    "\n",
     "print(\"Stilde_rhsD0: \"+str(np.log2((Data1[0])/(Data2[0]))))\n",
     "print(\"Stilde_rhsD1: \"+str(np.log2((Data1[1])/(Data2[1]))))\n",
     "print(\"Stilde_rhsD2: \"+str(np.log2((Data1[2])/(Data2[2]))))\n",
@@ -1154,7 +1168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
