--- a/NRPyPN/NRPyPN_shortcuts.ipynb
+++ b/NRPyPN/NRPyPN_shortcuts.ipynb
@@ -86,7 +86,6 @@
     "# Basic functions:\n",
     "# dot(a,b): 3-vector dot product\n",
     "# cross(a,b): 3-vector cross product\n",
-    "# define_LeviCivitaSymbol_rank3_dim3(): Outputs Levi-Civita symbol in 3 dimensions\n",
     "# div(a,b): a shortcut for SymPy's sp.Rational(a,b), to declare rational numbers\n",
     "# num_eval(expr): Numerically evaluates NRPyPN expressions\n",
     "\n",
@@ -102,11 +101,8 @@
     "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "\n",
-    "__all__ = ['m1','m2','S1U','S2U','pU','nU','drdt','Pt','Pr','r','q','chi1U','chi2U','gamma_EulerMascheroni',\n",
-    "           'n12U','n21U','p1U','p2U','define_LeviCivitaSymbol_rank3_dim3','dot','cross','div','num_eval']\n",
-    "\n",
-    "# Step 1: Declare several global variables used throughout\n",
-    "#         NRPyPN\n",
+    "# Step 1: Declare several global variables used\n",
+    "#         throughout NRPyPN\n",
     "m1,m2 = sp.symbols('m1 m2',real=True)\n",
     "S1U = ixp.declarerank1(\"S1U\")\n",
     "S2U = ixp.declarerank1(\"S2U\")\n",
@@ -153,7 +149,7 @@
     "Here we define \n",
     "* `dot(a,b)`=$\\mathbf{a}\\cdot\\mathbf{b}$, for 3-vectors $\\mathbf{a}$ and $\\mathbf{b}$\n",
     "* `cross(a,b)`=$\\mathbf{a}\\times\\mathbf{b}$, for 3-vectors $\\mathbf{a}$ and $\\mathbf{b}$\n",
-    "    * ... and the corresponding `define_LeviCivitaSymbol_rank3_dim3()` function, which constructs the [Levi-Civita symbol](https://en.wikipedia.org/wiki/Levi-Civita_symbol) used for cross products\n",
+    "    * ... calling the corresponding `ixp.LeviCivitaSymbol_dim3_rank3()` function from [indexedexp.py](../../edit/indexedexp.py), which constructs the [Levi-Civita symbol](https://en.wikipedia.org/wiki/Levi-Civita_symbol) used for cross products\n",
     "* `div(a,b)`=$a/b$, for integers $a$ and $b$. This is a convenient shortcut for SymPy's `sp.Rational(a,b)` function"
    ]
   },
@@ -173,19 +169,7 @@
    "source": [
     "%%writefile -a NRPyPN_shortcuts-validation.py\n",
     "\n",
-    "# Step 2.a: Define the rank-3 version of the Levi-Civita symbol. Amongst\n",
-    "#         other uses, this is needed for the construction of the approximate\n",
-    "#         quasi-Kinnersley tetrad.\n",
-    "def define_LeviCivitaSymbol_rank3_dim3():\n",
-    "    LeviCivitaSymbol = ixp.zerorank3()\n",
-    "    for i in range(3):\n",
-    "        for j in range(3):\n",
-    "            for k in range(3):\n",
-    "                # From https://codegolf.stackexchange.com/questions/160359/levi-civita-symbol :\n",
-    "                LeviCivitaSymbol[i][j][k] = (i - j) * (j - k) * (k - i) * sp.Rational(1,2)\n",
-    "    return LeviCivitaSymbol\n",
-    "\n",
-    "# Step 2.b: Define dot and cross product of vectors\n",
+    "# Step 2.a: Define dot and cross product of vectors\n",
     "def dot(vec1,vec2):\n",
     "    vec1_dot_vec2 = sp.sympify(0)\n",
     "    for i in range(3):\n",
@@ -194,14 +178,14 @@
     "\n",
     "def cross(vec1,vec2):\n",
     "    vec1_cross_vec2 = ixp.zerorank1()\n",
-    "    LeviCivitaSymbol = define_LeviCivitaSymbol_rank3_dim3()\n",
+    "    LeviCivitaSymbol = ixp.LeviCivitaSymbol_dim3_rank3()\n",
     "    for i in range(3):\n",
     "        for j in range(3):\n",
     "            for k in range(3):\n",
     "                vec1_cross_vec2[i] += LeviCivitaSymbol[i][j][k]*vec1[j]*vec2[k]\n",
     "    return vec1_cross_vec2\n",
     "\n",
-    "# Step 2.c: Construct rational numbers a/b via div(a,b)\n",
+    "# Step 2.b: Construct rational numbers a/b via div(a,b)\n",
     "def div(a,b):\n",
     "    return sp.Rational(a,b)"
    ]
@@ -321,7 +305,7 @@
     "        print(\"No difference. TEST PASSED!\")\n",
     "    else:\n",
     "        print(\"ERROR: Disagreement found with .py file. See differences above.\")\n",
-    "        sys.exit(1)\n"
+    "        sys.exit(1)"
    ]
   },
   {
@@ -346,7 +330,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created NRPyPN_shortcuts.tex, and compiled LaTeX file to PDF file NRPyPN_shortcuts.pdf\n"
+      "Created NRPyPN_shortcuts.tex, and compiled LaTeX file to PDF file\n",
+      "    NRPyPN_shortcuts.pdf\n"
      ]
     }
    ],
