GiRaFFE_NRPy: Further cleaning up the GiRaFFE notebooks.

--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb
@@ -241,13 +241,7 @@
     "import GRHD.equations as gh\n",
     "gh.compute_sqrtgammaDET(gammaDD)\n",
     "\n",
-    "import WeylScal4NRPy.WeylScalars_Cartesian as weyl\n",
-    "LeviCivitaDDD = weyl.define_LeviCivitaSymbol_rank3()\n",
-    "LeviCivitaUUU = ixp.zerorank3()\n",
-    "for i in range(3):\n",
-    "    for j in range(3):\n",
-    "        for k in range(3):\n",
-    "            LeviCivitaUUU[i][j][k] = LeviCivitaDDD[i][j][k] / gh.sqrtgammaDET\n",
+    "LeviCivitaUUU = ixp.LeviCivitaTensorUUU_dim3_rank3(gh.sqrtgammaDET)\n",
     "\n",
     "B_analyticU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"B_analyticU\")\n",
     "for i in range(3):\n",
@@ -941,7 +935,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
