--- a/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave.ipynb
@@ -106,7 +106,7 @@
     "rfm.reference_metric()\n",
     "\n",
     "# Step 1a: Set commonly used parameters.\n",
-    "thismodule = \"GiRaFFEfood_NRPy_1D\"\n"
+    "thismodule = \"GiRaFFEfood_NRPy_1D\""
    ]
   },
   {
@@ -232,7 +232,7 @@
     "EU = ixp.zerorank1()\n",
     "EU[0] = sp.sympify(0)\n",
     "EU[1] = sp.sympify(0)\n",
-    "EU[2] = -BU[1]\n"
+    "EU[2] = -BU[1]"
    ]
   },
   {
@@ -253,21 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Levi-Civita symbol\n",
-    "def define_LeviCivitaSymbol_rank3(DIM=-1):\n",
-    "    if DIM == -1:\n",
-    "        DIM = par.parval_from_str(\"DIM\")\n",
-    "\n",
-    "    LeviCivitaSymbol = ixp.zerorank3()\n",
-    "\n",
-    "    for i in range(DIM):\n",
-    "        for j in range(DIM):\n",
-    "            for k in range(DIM):\n",
-    "                # From https://codegolf.stackexchange.com/questions/160359/levi-civita-symbol :\n",
-    "                LeviCivitaSymbol[i][j][k] = (i - j) * (j - k) * (k - i) * sp.Rational(1,2)\n",
-    "    return LeviCivitaSymbol\n",
-    "# Here, we import the Levi-Civita tensor and compute the tensor with lower indices\n",
-    "LeviCivitaSymbolDDD = define_LeviCivitaSymbol_rank3()\n",
+    "LeviCivitaSymbolDDD = ixp.LeviCivitaSymbol_dim3_rank3()\n",
     "\n",
     "B2 = sp.sympify(0)\n",
     "for i in range(3):\n",
@@ -325,7 +311,7 @@
     "for i in range(3):\n",
     "\n",
     "    print(\"ValenciavU[\"+str(i)+\"] - gfho.ValenciavU[\"+str(i)+\"] = \" + str(ValenciavU[i] - gfho.ValenciavU[i]))\n",
-    "    print(\"AD[\"+str(i)+\"]         - gfho.AD[\"+str(i)+\"]         = \" + str(AD[i] - gfho.AD[i]))\n"
+    "    print(\"AD[\"+str(i)+\"]         - gfho.AD[\"+str(i)+\"]         = \" + str(AD[i] - gfho.AD[i]))"
    ]
   },
   {
