--- a/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests.ipynb
@@ -340,22 +340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Levi-Civita symbol\n",
-    "def define_LeviCivitaSymbol_rank3(DIM=-1):\n",
-    "    if DIM == -1:\n",
-    "        DIM = par.parval_from_str(\"DIM\")\n",
-    "\n",
-    "    LeviCivitaSymbol = ixp.zerorank3()\n",
-    "\n",
-    "    for i in range(DIM):\n",
-    "        for j in range(DIM):\n",
-    "            for k in range(DIM):\n",
-    "                # From https://codegolf.stackexchange.com/questions/160359/levi-civita-symbol :\n",
-    "                LeviCivitaSymbol[i][j][k] = (i - j) * (j - k) * (k - i) * sp.Rational(1,2)\n",
-    "    return LeviCivitaSymbol\n",
-    "GRHD.compute_sqrtgammaDET(gammaDD)\n",
-    "# Here, we import the Levi-Civita tensor and compute the tensor with lower indices\n",
-    "LeviCivitaSymbolDDD = define_LeviCivitaSymbol_rank3()\n",
+    "LeviCivitaSymbolDDD = ixp.LeviCivitaSymbol_dim3_rank3()\n",
     "\n",
     "B2 = sp.sympify(0)\n",
     "for i in range(3):\n",
