--- a/in_progress/Tutorial-GiRaFFEfood_NRPy_Exact_Wald.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy_Exact_Wald.ipynb
@@ -137,7 +137,7 @@
     "ASphD = ixp.zerorank1()\n",
     "ESphD = ixp.zerorank1()\n",
     "ASphD[2] = (r * r * sp.sin(theta)**2)/2\n",
-    "ESphD[2] = 2 * M * sp.sin(theta)**2 / sp.sqrt(1+2*M/r)\n"
+    "ESphD[2] = 2 * M * sp.sin(theta)**2 / sp.sqrt(1+2*M/r)"
    ]
   },
   {
@@ -187,7 +187,7 @@
     "gammaDD = ixp.declarerank2(\"gammaDD\", \"sym01\",DIM=3)\n",
     "\n",
     "import GRHD.equations as GRHD\n",
-    "GRHD.compute_sqrtgammaDET(gammaDD)\n"
+    "GRHD.compute_sqrtgammaDET(gammaDD)"
    ]
   },
   {
@@ -210,28 +210,9 @@
    "source": [
     "# Step 4: Calculate v^i from A_i and E_i\n",
     "# Step 4a: Calculate the magnetic field B^i\n",
-    "# Here, we build the Levi-Civita tensor from the Levi-Civita symbol.\n",
-    "# Define Levi-Civita symbol\n",
-    "def define_LeviCivitaSymbol_rank3(DIM=-1):\n",
-    "    if DIM == -1:\n",
-    "        DIM = par.parval_from_str(\"DIM\")\n",
     "\n",
-    "    LeviCivitaSymbol = ixp.zerorank3()\n",
-    "\n",
-    "    for i in range(DIM):\n",
-    "        for j in range(DIM):\n",
-    "            for k in range(DIM):\n",
-    "                # From https://codegolf.stackexchange.com/questions/160359/levi-civita-symbol :\n",
-    "                LeviCivitaSymbol[i][j][k] = (i - j) * (j - k) * (k - i) * sp.Rational(1,2)\n",
-    "    return LeviCivitaSymbol\n",
     "GRHD.compute_sqrtgammaDET(gammaDD)\n",
-    "# Here, we import the Levi-Civita tensor and compute the tensor with lower indices\n",
-    "LeviCivitaSymbolDDD = define_LeviCivitaSymbol_rank3()\n",
-    "LeviCivitaTensorUUU = ixp.zerorank3()\n",
-    "for i in range(3):\n",
-    "    for j in range(3):\n",
-    "        for k in range(3):\n",
-    "            LeviCivitaTensorUUU[i][j][k] = LeviCivitaSymbolDDD[i][j][k] / GRHD.sqrtgammaDET\n",
+    "LeviCivitaTensorUUU = ixp.LeviCivitaTensorUUU_dim3_rank3(GRHD.sqrtgammaDET)\n",
     "\n",
     "# For the initial data, we can analytically take the derivatives of A_i\n",
     "ADdD = ixp.zerorank2()\n",
@@ -243,7 +224,7 @@
     "for i in range(3):\n",
     "    for j in range(3):\n",
     "        for k in range(3):\n",
-    "            BU[i] += LeviCivitaTensorUUU[i][j][k] * ADdD[k][j]\n"
+    "            BU[i] += LeviCivitaTensorUUU[i][j][k] * ADdD[k][j]"
    ]
   },
   {
@@ -279,7 +260,7 @@
     "for i in range(3):\n",
     "    for j in range(3):\n",
     "        for k in range(3):\n",
-    "            ValenciavU[i] += LeviCivitaTensorUUU[i][j][k]*ED[j]*BD[k]/B2\n"
+    "            ValenciavU[i] += LeviCivitaTensorUUU[i][j][k]*ED[j]*BD[k]/B2"
    ]
   },
   {
@@ -375,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
